tests/contract_testcases/substrate/function_types/decls_04.sol
contract test {
            function foo() public {
                function() returns (bool x) a;
            }
        }
// ---- Expect: diagnostics ----
// error: 3:42-43: function type returns cannot be named
